--- a/site/tela_principal/index.html
+++ b/site/tela_principal/index.html
@@ -88,7 +88,7 @@
             <a class="nav-link active" href="http://localhost/ecampanhado-main/ecampanhado-main/site/tela_principal/Logins_v4/index.html">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Cadastro</a>
+            <a class="nav-link active" href="http://localhost/ecampanhado-main/ecampanhado-main/site/tela_principal/Cadastro_v2/index.html">Cadastro</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
